# mu_lang

./: APPROACH_IMPROVEMENTS.md  CMakeLists.txt  LEXER_PORT_DIFFERENCES.md  LLVM_OK_MU_GAP_ANALYSIS.md  README.md  a.out  grammer.md  lexer.cpp  lexer.hpp  main.cpp  mu_real_spec.md  out  sema.cpp  sema.hpp  tags
.github/: copilot-instructions.md
examples/: bigtest.mu  ok.mu  struct.mu  test.mu  variables.mu
